[gd_scene load_steps=7 format=2]

[ext_resource path="res://Ball/ball.png" type="Texture" id=1]
[ext_resource path="res://Ball/Ball.gd" type="Script" id=2]
[ext_resource path="res://sounds/bounce.mp3" type="AudioStream" id=3]
[ext_resource path="res://sounds/lose.mp3" type="AudioStream" id=4]
[ext_resource path="res://sounds/win.mp3" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[node name="Ball" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="ball_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ball_collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="bounce_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="win_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="lose_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
